--- a/src/demo.html
+++ b/src/demo.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
+  <script src="saia-pf-button.js"></script>
   <script src="saia-pf-widget.js"></script>
 </body>
 </html>
