--- a/src/demo.html
+++ b/src/demo.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Store demo page</title>
 </head>
 <body>
+  Demo page
+  <div class="saia-widget-container"></div>
   <script src="saia-pf-button.js"></script>
-  <script src="saia-pf-widget.js"></script>
 </body>
 </html>
