update config and demo.html

--- a/src/demo.html
+++ b/src/demo.html
@@ -9,6 +9,6 @@
 <body>
   Demo page
   <div class="saia-widget-container"></div>
-  <script src="saia-pf-button.js"></script>
+  <script src="saia-pf-shopify.js"></script>
 </body>
 </html>
