--- a/src/demo.html
+++ b/src/demo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   Demo page
-  <div class="product-single__meta"></div>
+  <div class="saia-widget-container"></div>
   <script src="saia-pf-shopify.js"></script>
 </body>
 </html>
